# ecomm

./: .gitignore  .travis.yml  CMakeLists.txt  EposComm.cpp  EposComm.h  EposComm.kdev4  EposCommBi.cpp  EposCommBi.h  EposCommand.cpp  EposCommand.h  LICENSE  README.md  a.out  duplex.cpp  mPosixqueue.cpp  mVqueue.cpp  main.cpp
src/: CMakeLists.txt  EasinComm.cpp  EasinComm.h  EasinCommBi.cpp  EasinCommBi.h  EasinCommFull.h  EasinCommObj.h  EasinCommand.cpp  EasinCommand.h
tests/: EasinCommTest.cpp  EasinCommTestDuplex.cpp  EasinCommand.cpp  EasinCommand.h
